# cgql2

./: CMakeLists.txt  run.sh
include/cgql2/: execute.h  lexer.h  parse.h  printer.h  ptr.h  query.h  schema.h
parser/: baseParser.cpp  documentParser.cpp  lexer.cpp  schemaParser.cpp
query/: printQuery.cpp  query.cpp
schema/: printSchema.cpp  schemaImpl.cpp
tests/: CMakeLists.txt  main.cpp
